<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="filnik.salestaxesproblem.activities.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_marginTop="6dp"
            android:orientation="horizontal"
            android:weightSum="2" >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:layout_weight="@integer/config_first"
                android:singleLine="true"
                android:layout_gravity="center"
                android:text="@string/name"
                android:textSize="17sp" />
            <EditText
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/config_second"
                android:singleLine="true"
                android:layout_marginRight="24dp"
                android:layout_gravity="center"
                android:hint="@string/name_hint"
                android:textSize="17sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_marginTop="6dp"
            android:orientation="horizontal"
            android:weightSum="2" >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:layout_weight="@integer/config_first"
                android:singleLine="true"
                android:layout_gravity="center"
                android:text="@string/type"
                android:textSize="17sp" />
            <Spinner
                android:id="@+id/type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/config_second"
                android:singleLine="true"
                android:layout_marginRight="24dp"
                android:layout_gravity="center"
                android:entries="@array/item_types"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_marginTop="6dp"
            android:orientation="horizontal"
            android:weightSum="2" >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:layout_weight="@integer/config_first"
                android:singleLine="true"
                android:layout_gravity="center"
                android:text="@string/price"
                android:textSize="17sp" />
            <EditText
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/config_second"
                android:singleLine="true"
                android:layout_marginRight="24dp"
                android:layout_gravity="center"
                android:hint="@string/price_hint"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_marginTop="6dp"
            android:orientation="horizontal"
            android:weightSum="2" >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:layout_weight="@integer/config_first"
                android:singleLine="true"
                android:layout_gravity="center"
                android:text="@string/imported"
                android:textSize="17sp" />
            <CheckBox
                android:id="@+id/imported"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/config_second"
                android:singleLine="true"
                android:layout_marginRight="24dp"
                android:layout_gravity="center"
                android:textSize="17sp" />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/add_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"/>
</RelativeLayout>
